--- a/css/main.css
+++ b/css/main.css
@@ -920,6 +920,7 @@ body {
   border-bottom-right-radius: 4px;
   overflow: hidden;
 }
+
 .v117_651 {
   width: 4px;
   height: 40px;
@@ -980,3 +981,750 @@ body {
   color: #fff;
 }
 /*Конец css 1-ой страницы*/
+
+
+/*Начало css 2-ой страницы*/
+* {
+  box-sizing: border-box;
+}
+body {
+  font-size: 14px;
+}
+.v53_174 {
+  width: 100%;
+  height: 1465px;
+  background: rgb(254, 223, 223);
+  opacity: 1;
+  position: absolute;
+  top: 200px;
+  left: 0px;
+  overflow: hidden;
+}
+.name {
+  color: #fff;
+}
+.v53_178 {
+  width: 100%;
+  height: 144px;
+  background: url("../img/v53_178.png");
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+  opacity: 1;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  overflow: hidden;
+}
+.v53_179 {
+  width: 100%;
+  height: 122px;
+  background: rgba(255,255,255,1);
+  opacity: 1;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  box-shadow: 0px 4px 24px rgba(0, 0, 0, 0.15000000596046448);
+  overflow: hidden;
+}
+.v53_180 {
+  width: 166px;
+  height: 83px;
+  background: url("../img/v53_180.png");
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+  opacity: 1;
+  position: absolute;
+  top: 20px;
+  left: 394px;
+  overflow: hidden;
+}
+.v53_181 {
+  width: 499px;
+  color: rgba(50,73,80,1);
+  position: absolute;
+  top: 74px;
+  left: 1016px;
+  font-family: Heebo;
+  font-weight: Medium;
+  font-size: 18px;
+  opacity: 1;
+  text-align: right;
+}
+.v53_182 {
+  width: 350px;
+  height: 29px;
+  background: url("../img/v53_182.png");
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+  opacity: 1;
+  position: absolute;
+  top: 20px;
+  left: 1165px;
+  overflow: hidden;
+}
+.name {
+  color: #fff;
+}
+.v53_184 {
+  width: 53px;
+  color: rgba(50,73,80,1);
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  font-family: Roboto Slab;
+  font-weight: Regular;
+  font-size: 16px;
+  opacity: 1;
+  text-align: left;
+}
+.name {
+  color: #fff;
+}
+.v53_205 {
+  width: 100%;
+  height: 127px;
+  background: url("../img/v53_205.png");
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+  opacity: 1;
+  position: absolute;
+  top: 1338px;
+  left: 0px;
+  overflow: hidden;
+}
+.v53_206 {
+  width: 100%;
+  height: 127px;
+  background: rgba(50,73,80,1);
+  opacity: 1;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  overflow: hidden;
+}
+.v53_207 {
+  width: 100%;
+  height: 76px;
+  background: rgba(44,63,69,1);
+  opacity: 1;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  overflow: hidden;
+}
+.v53_208 {
+  width: 295px;
+  color: rgba(184,184,184,1);
+  position: absolute;
+  top: 94px;
+  left: 812px;
+  font-family: Roboto;
+  font-weight: Regular;
+  font-size: 14px;
+  opacity: 1;
+  text-align: left;
+}
+.v53_209 {
+  width: 724px;
+  color: rgba(255,255,255,1);
+  position: absolute;
+  top: 27px;
+  left: 405px;
+  font-family: Roboto;
+  font-weight: Regular;
+  font-size: 16px;
+  opacity: 1;
+  text-align: left;
+}
+.v53_210 {
+  width: 31px;
+  height: 31px;
+  background: rgba(255,255,255,1);
+  opacity: 1;
+  position: absolute;
+  top: 23px;
+  left: 1303px;
+  overflow: hidden;
+}
+.v53_211 {
+  width: 30px;
+  height: 30px;
+  background: rgba(87,152,76,1);
+  opacity: 1;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+}
+.v53_212 {
+  width: 31px;
+  height: 31px;
+  background: rgba(255,255,255,1);
+  opacity: 1;
+  position: absolute;
+  top: 23px;
+  left: 1348px;
+  overflow: hidden;
+}
+.v53_213 {
+  width: 30px;
+  height: 30px;
+  background: rgba(87,152,76,1);
+  opacity: 1;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+}
+.v53_214 {
+  width: 16px;
+  height: 16px;
+  background: url("../img/v53_214.png");
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+  opacity: 1;
+  position: absolute;
+  top: 7px;
+  left: 7px;
+  overflow: hidden;
+}
+.v53_215 {
+  width: 16px;
+  height: 16px;
+  background: rgba(87,152,76,1);
+  opacity: 1;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+}
+.v53_216 {
+  width: 7px;
+  height: 7px;
+  background: rgba(87,152,76,1);
+  opacity: 1;
+  position: absolute;
+  top: 3px;
+  left: 4px;
+}
+.v53_217 {
+  width: 1px;
+  height: 1px;
+  background: rgba(87,152,76,1);
+  opacity: 1;
+  position: absolute;
+  top: 2px;
+  left: 11px;
+}
+.v53_218 {
+  width: 31px;
+  height: 31px;
+  background: rgba(255,255,255,1);
+  opacity: 1;
+  position: absolute;
+  top: 23px;
+  left: 1393px;
+  overflow: hidden;
+}
+.v53_219 {
+  width: 30px;
+  height: 30px;
+  background: rgba(87,152,76,1);
+  opacity: 1;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+}
+.v53_220 {
+  width: 31px;
+  height: 31px;
+  background: rgba(255,255,255,1);
+  opacity: 1;
+  position: absolute;
+  top: 23px;
+  left: 1438px;
+  overflow: hidden;
+}
+.v53_221 {
+  width: 30px;
+  height: 30px;
+  background: rgba(87,152,76,1);
+  opacity: 1;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+}
+.v53_222 {
+  width: 31px;
+  height: 31px;
+  background: rgba(255,255,255,1);
+  opacity: 1;
+  position: absolute;
+  top: 23px;
+  left: 1483px;
+  overflow: hidden;
+}
+.v53_223 {
+  width: 30px;
+  height: 30px;
+  background: rgba(87,152,76,1);
+  opacity: 1;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+}
+.v53_224 {
+  width: 75px;
+  height: 35px;
+  background: url("../img/v53_224.png");
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+  opacity: 1;
+  position: absolute;
+  top: 68px;
+  left: 833px;
+  overflow: hidden;
+}
+.v53_225 {
+  width: 96px;
+  height: 33px;
+  background: url("../img/v53_225.png");
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+  opacity: 1;
+  position: absolute;
+  top: 70px;
+  left: 1260px;
+  overflow: hidden;
+}
+.v53_264 {
+  width: 526px;
+  height: 277px;
+  background: url("../img/v53_264.png");
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+  opacity: 1;
+  position: absolute;
+  top: 52px;
+  left: 50px;
+  overflow: hidden;
+}
+.v53_264_1 {
+  width: 526px;
+  height: 277px;
+  background: url("../img/v53_264.png");
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+  opacity: 1;
+  position: absolute;
+  top: 80px;
+  left: 0px;
+  overflow: hidden;
+  color:rgb(12, 140, 0);
+}
+.v53_265 {
+  width: 526px;
+  color: url("../img/v53_265.png");
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  font-family: Roboto Slab;
+  font-weight: Bold;
+  font-size: 54px;
+  opacity: 1;
+  text-align: left;
+}
+.name {
+  color: #fff;
+}
+.v53_283 {
+  width: 540px;
+  height: 498px;
+  background: url("../img/v53_283.png");
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+  opacity: 1;
+  position: absolute;
+  top: 52px;
+  left: 625px;
+  box-shadow: 0px 20px 40px rgba(0, 0, 0, 0.25);
+  overflow: hidden;
+}
+.v53_308 {
+  width: 400px;
+  color: rgba(50,73,80,1);
+  position: absolute;
+  top: 741px;
+  left: 75px;
+  font-family: Roboto Slab;
+  font-weight: Regular;
+  font-size: 17px;
+  opacity: 1;
+  text-align: left;
+}
+.v53_314 {
+  width: 100px;
+  color: rgba(50,73,80,1);
+  position: absolute;
+  top: 741px;
+  left: 645px;
+  font-family: Roboto Slab;
+  font-weight: Regular;
+  font-size: 17px;
+  opacity: 1;
+  text-align: left;
+}
+.v53_317 {
+  width: 100px;
+  color: rgba(50,73,80,1);
+  position: absolute;
+  top: 938px;
+  left: 645px;
+  font-family: Roboto Slab;
+  font-weight: Regular;
+  font-size: 17px;
+  opacity: 1;
+  text-align: left;
+}
+.v53_311 {
+  width: 600px;
+  color: rgba(50,73,80,1);
+  position: absolute;
+  top: 938px;
+  left: 75px;
+  font-family: Roboto Slab;
+  font-weight: Regular;
+  font-size: 17px;
+  opacity: 1;
+  text-align: left;
+}
+.v53_309 {
+  width: 56px;
+  color: rgba(87,152,76,1);
+  position: absolute;
+  top: 676px;
+  left: 75px;
+  font-family: Roboto Slab;
+  font-weight: Bold;
+  font-size: 20px;
+  opacity: 1;
+  text-align: left;
+}
+
+.v53_315 {
+  width: 53px;
+  color: rgba(87,152,76,1);
+  position: absolute;
+  top: 676px;
+  left: 645px;
+  font-family: Roboto Slab;
+  font-weight: Bold;
+  font-size: 20px;
+  opacity: 1;
+  text-align: left;
+}
+.v53_318 {
+  width: 51px;
+  color: rgba(87,152,76,1);
+  position: absolute;
+  top: 873px;
+  left: 645px;
+  font-family: Roboto Slab;
+  font-weight: Bold;
+  font-size: 20px;
+  opacity: 1;
+  text-align: left;
+}
+.v53_312 {
+  width: 52px;
+  color: rgba(87,152,76,1);
+  position: absolute;
+  top: 873px;
+  left: 75px;
+  font-family: Roboto Slab;
+  font-weight: Bold;
+  font-size: 20px;
+  opacity: 1;
+  text-align: left;
+}
+.v53_565 {
+  width: 495px;
+  height: 149px;
+  background: url("../img/v53_565.png");
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+  opacity: 1;
+  position: absolute;
+  top: 497px;
+  left: 75px;
+  overflow: hidden;
+}
+.v53_266 {
+  width: 495px;
+  color: rgba(50,73,80,1);
+  position: absolute;
+  top: 65px;
+  left: 0px;
+  font-size: 17px;
+  opacity: 1;
+  text-align: left;
+}
+.v53_290 {
+  width: 188px;
+  color: rgba(87,152,76,1);
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  font-family: Roboto Slab;
+  font-weight: Bold;
+  font-size: 20px;
+  opacity: 1;
+  text-align: left;
+}
+.name {
+  color: #fff;
+}
+.name {
+  color: #fff;
+}
+.name {
+  color: #fff;
+}
+.name {
+  color: #fff;
+}
+.name {
+  color: #fff;
+}
+.v53_287 {
+  width: 185px;
+  height: 23px;
+  background: url("../img/v53_287.png");
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+  opacity: 1;
+  position: absolute;
+  top: 10px;
+  left: 0px;
+  overflow: hidden;
+}
+.v53_286 {
+  width: 146px;
+  color: rgba(87,152,76,1);
+  position: absolute;
+  top: 0px;
+  left: 39px;
+  font-family: Roboto Slab;
+  font-weight: Regular;
+  font-size: 14px;
+  opacity: 1;
+  text-align: left;
+}
+.v53_285 {
+  width: 24px;
+  background: url("../img/v53_285.png");
+  opacity: 1;
+  position: absolute;
+  top: 11px;
+  left: 24px;
+  border: 1px solid rgba(87,152,76,1);
+}
+.v53_307 {
+  width: 498px;
+  height: 86px;
+  background: url("../img/v53_307.png");
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+  opacity: 1;
+  position: absolute;
+  top: 371px;
+  left: 75px;
+  overflow: hidden;
+}
+.v53_306 {
+  width: 395px;
+  color: rgba(207,35,51,1);
+  position: absolute;
+  top: 0px;
+  left: 103px;
+  font-family: Roboto Slab;
+  font-weight: Bold;
+  font-size: 30px;
+  opacity: 1;
+  text-align: left;
+}
+.v53_305 {
+  width: 80px;
+  height: 80px;
+  background: url("../img/v53_305.png");
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+  opacity: 1;
+  position: absolute;
+  top: 3px;
+  left: 0px;
+  overflow: hidden;
+}
+.v53_301 {
+  width: 80px;
+  height: 80px;
+  background: url(../img/.v53_301.png);
+  opacity: 1;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+}
+.name {
+  color: #fff;
+}
+
+
+.v53_321 {
+  width: 6px;
+  height: 6px;
+  background: rgba(87,152,76,1);
+  opacity: 1;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  border-radius: 50%;
+}
+.v53_322 {
+  width: 6px;
+  height: 6px;
+  background: rgba(87,152,76,1);
+  opacity: 1;
+  position: absolute;
+  top: 34px;
+  left: 0px;
+  border-radius: 50%;
+}
+.v53_323 {
+  width: 6px;
+  height: 6px;
+  background: rgba(87,152,76,1);
+  opacity: 1;
+  position: absolute;
+  top: 67px;
+  left: 0px;
+  border-radius: 50%;
+}
+
+
+.v53_326 {
+  width: 6px;
+  height: 6px;
+  background: rgba(87,152,76,1);
+  opacity: 1;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  border-radius: 50%;
+}
+.v53_327 {
+  width: 6px;
+  height: 6px;
+  background: rgba(87,152,76,1);
+  opacity: 1;
+  position: absolute;
+  top: 34px;
+  left: 0px;
+  border-radius: 50%;
+}
+.v53_328 {
+  width: 6px;
+  height: 6px;
+  background: rgba(87,152,76,1);
+  opacity: 1;
+  position: absolute;
+  top: 67px;
+  left: 0px;
+  border-radius: 50%;
+}
+
+.v53_330 {
+  width: 6px;
+  height: 6px;
+  background: rgba(87,152,76,1);
+  opacity: 1;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  border-radius: 50%;
+}
+.v53_331 {
+  width: 6px;
+  height: 6px;
+  background: rgba(87,152,76,1);
+  opacity: 1;
+  position: absolute;
+  top: 34px;
+  left: 0px;
+  border-radius: 50%;
+}
+.v53_332 {
+  width: 6px;
+  height: 6px;
+  background: rgba(87,152,76,1);
+  opacity: 1;
+  position: absolute;
+  top: 67px;
+  left: 0px;
+  border-radius: 50%;
+}
+.v65_52 {
+  width: 225px;
+  height: 55px;
+  background: url("../img/v65_52.png");
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+  opacity: 1;
+  position: absolute;
+  top: 580px;
+  left: 650px;
+  overflow: hidden;
+}
+.v65_51 {
+  width: 225px;
+  height: 55px;
+  background: rgba(255,255,255,1);
+  opacity: 1;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  border: 2px solid rgba(87,152,76,1);
+  border-top-left-radius: 60px;
+  border-top-right-radius: 60px;
+  border-bottom-left-radius: 60px;
+  border-bottom-right-radius: 60px;
+  overflow: hidden;
+}
+.v65_46 {
+  width: 120px;
+  color: rgba(87,152,76,1);
+  position: absolute;
+  top: 11px;
+  left: 76px;
+  font-family: Roboto Slab;
+  font-weight: Bold;
+  font-size: 17px;
+  opacity: 1;
+  text-align: left;
+}
+.name {
+  color: #fff;
+}
+
+/*Конец css 2-ой страницы*/
