--- a/css/main.css
+++ b/css/main.css
@@ -30,14 +30,14 @@ body {
   overflow: hidden;
 }
 .v117_649 {
-  width: 1152px;
+  width: 100%;
   height: 449.5px;
   background: rgba(255,249,249,1);
   opacity: 1;
   position: absolute;
   top: 1203.5px;
-  left: 180px;
-  overflow: hidden;
+  left: 3%;
+ overflow: hidden;
 }
 .v53_11 {
   width: 100%;
@@ -429,7 +429,7 @@ body {
   opacity: 1;
   position: absolute;
   top: 70px;
-  left: 1260px;
+  left: 5%;
   overflow: hidden;
 }
 .v53_130 {
@@ -442,7 +442,7 @@ body {
   opacity: 1;
   position: absolute;
   top: 1773px;
-  left: 180px;
+  left: 5%;
   overflow: hidden;
 }
 .v53_131 {
@@ -488,7 +488,7 @@ body {
   opacity: 1;
   position: absolute;
   top: 2124px;
-  left: 180px;
+  left: 5%;
   overflow: hidden;
 }
 .v53_148 {
@@ -534,7 +534,7 @@ body {
   opacity: 1;
   position: absolute;
   top: 2475px;
-  left: 180px;
+  left: 5%;
   overflow: hidden;
 }
 .v53_160 {
@@ -580,7 +580,7 @@ body {
   opacity: 1;
   position: absolute;
   top: 1773px;
-  left: 560px;
+  left: 35%;
   overflow: hidden;
 }
 .v53_136 {
@@ -626,7 +626,7 @@ body {
   opacity: 1;
   position: absolute;
   top: 2124px;
-  left: 560px;
+  left: 35%;
   overflow: hidden;
 }
 .v53_152 {
@@ -672,7 +672,7 @@ body {
   opacity: 1;
   position: absolute;
   top: 2475px;
-  left: 560px;
+  left: 35%;
   overflow: hidden;
 }
 .v53_164 {
@@ -718,7 +718,7 @@ body {
   opacity: 1;
   position: absolute;
   top: 1773px;
-  left: 940px;
+  left: 65%;
   overflow: hidden;
 }
 .v53_141 {
@@ -764,7 +764,7 @@ body {
   opacity: 1;
   position: absolute;
   top: 2124px;
-  left: 940px;
+  left: 65%;
   overflow: hidden;
 }
 .v53_156 {
@@ -801,21 +801,21 @@ body {
   text-align: center;
 }
 .v53_288 {
-  width: 100%;
+  max-width: 85%;
   color: rgba(50,73,80,1);
   position: absolute;
   top: 803px;
-  left: 180px;
+  left: 5%;
   font-size: 17px;
   opacity: 1;
   text-align: left;
 }
 .v117_637 {
-  width: 100%;
+  max-width: 85%;
   color: rgba(50,73,80,1);
   position: absolute;
   top: 1116px;
-  left: 220px;
+  left: 7%;
   font-family: Roboto Slab;
   font-weight: Regular;
   font-size: 17px;
@@ -827,7 +827,7 @@ body {
   color: rgba(50,73,80,1);
   position: absolute;
   top: 1700px;
-  left: 220px;
+  left: 7%;
   font-family: Roboto Slab;
   font-weight: Bold;
   font-size: 17px;
@@ -839,7 +839,7 @@ body {
   color: rgba(50,73,80,1);
   position: absolute;
   top: 1341px;
-  left: 200px;
+  left: 5%;
   font-size: 17px;
   opacity: 1;
   text-align: left;
@@ -849,7 +849,7 @@ body {
   color: rgba(50,73,80,1);
   position: absolute;
   top: 1341px;
-  left: 585px;
+  left: 35%;
   font-size: 17px;
   opacity: 1;
   text-align: left;
@@ -859,7 +859,7 @@ body {
   color: rgba(50,73,80,1);
   position: absolute;
   top: 1341px;
-  left: 965px;
+  left: 65%;
   font-size: 17px;
   opacity: 1;
   text-align: left;
@@ -871,7 +871,7 @@ body {
   opacity: 1;
   position: absolute;
   top: 1113px;
-  left: 180px;
+  left: 5%;
   border-top-left-radius: 4px;
   border-top-right-radius: 4px;
   border-bottom-left-radius: 4px;
@@ -885,12 +885,13 @@ body {
   opacity: 1;
   position: absolute;
   top: 1323px;
-  left: 190px;
+  left: 5%;
   border-top-left-radius: 4px;
   border-top-right-radius: 4px;
   border-bottom-left-radius: 4px;
   border-bottom-right-radius: 4px;
   overflow: hidden;
+  display: block;
 }
 .v117_638_2 {
   width: 350px;
@@ -899,7 +900,7 @@ body {
   opacity: 1;
   position: absolute;
   top: 1323px;
-  left: 583px;
+  left: 35%;
   border-top-left-radius: 4px;
   border-top-right-radius: 4px;
   border-bottom-left-radius: 4px;
@@ -913,7 +914,7 @@ body {
   opacity: 1;
   position: absolute;
   top: 1323px;
-  left: 963px;
+  left: 65%;
   border-top-left-radius: 4px;
   border-top-right-radius: 4px;
   border-bottom-left-radius: 4px;
@@ -928,7 +929,7 @@ body {
   opacity: 1;
   position: absolute;
   top: 1693px;
-  left: 180px;
+  left: 5%;
   border-top-left-radius: 4px;
   border-top-right-radius: 4px;
   border-bottom-left-radius: 4px;
@@ -940,7 +941,7 @@ body {
   color: rgba(50,73,80,1);
   position: absolute;
   top: 1253px;
-  left: 200px;
+  left: 5%;
   font-family: Roboto Slab;
   font-weight: Bold;
   font-size: 20px;
@@ -952,7 +953,7 @@ body {
   color: rgba(50,73,80,1);
   position: absolute;
   top: 1253px;
-  left: 585px;
+  left: 35%;
   font-family: Roboto Slab;
   font-weight: Bold;
   font-size: 20px;
@@ -964,7 +965,7 @@ body {
   color: rgba(50,73,80,1);
   position: absolute;
   top: 1253px;
-  left: 965px;
+  left: 65%;
   font-family: Roboto Slab;
   font-weight: Bold;
   font-size: 20px;
